Mas correcciones de prueba

--- a/Kodi/index.html
+++ b/Kodi/index.html
@@ -3,8 +3,8 @@
  <h1>ReposKodiPapela/</h1>
  </head>
  <body>
-  <li><a href="Deportes/">Addons Deportes</a><td></td></li>
-  <li><a href="Pelis/">Addons Pelis</a><td></td></li>
+  <li><a href="Deportes/">Deportes</a><td></td></li>
+  <li><a href="Pelis/">Pelis</a><td></td></li>
   <li><a href="Programas/">Programas</a><td></td></li>
   <li><a href="Reproductores-Torrents/">Reproductores-Torrents</a><td></td></li>
   <li><a href="Scripts/">Scripts</a><td></td></li>
