Plug in para eliminar Cache añadido

--- a/Kodi/Programas/index.html
+++ b/Kodi/Programas/index.html
@@ -4,5 +4,6 @@
  </head>
  <body>
   <li><a href="script.luar-0.9.5.zip">script.luar-0.9.5.zip</a></li>
+  <li><a href="repository.openwizard-2.0.zip">repository.openwizard-2.0.zip</a></li>
   </ul>
 </body></html>
