Actualiando algunos de los addons de Kodi.

--- a/Kodi/Programas/index.html
+++ b/Kodi/Programas/index.html
@@ -1,9 +1,12 @@
 <html>
- <head>
-<h1>ReposKodiPapela/Programas/</h1>
- </head>
- <body>
-  <li><a href="script.luar-0.9.5.zip">script.luar-0.9.5.zip</a></li>
-  <li><a href="repository.openwizard-2.0.zip">repository.openwizard-2.0.zip</a></li>
-  </ul>
-</body></html>
+  <head>
+    <h1>ReposKodiPapela/Programas/</h1>
+  </head>
+  <body>
+    <ul>
+      <li><a href="repository.openwizard-2.0.zip">repository.openwizard-2.0.zip</a></li>
+      <li><a href="script.luar-0.9.10.zip">script.luar-0.9.10.zip</a></li>
+      <li><a href="ace-stream-livetv-3-1-80.apk">ace-stream-livetv-3-1-80.apk</a></li>
+    </ul>
+  </body>
+</html>
