--- a/Kodi/Reproductores-Torrents/Elementum/Android/index.html
+++ b/Kodi/Reproductores-Torrents/Elementum/Android/index.html
@@ -1,3 +1,6 @@
 <h1>ReposKodiPapela/Pelis/</h1>
-                                                                
-<li><a href="plugin.video.elementum-0.1.98.android_x64.zip">plugin.video.elementum-0.1.98.android_x64.zip</a></li>
+
+<ul>
+    <li><a href="plugin.video.elementum-0.1.102.android_x64.zip">plugin.video.elementum-0.1.102.android_x64.zip</a></li>
+    <li><a href="plugin.video.elementum-0.1.102.android_arm64.zip">plugin.video.elementum-0.1.102.android_arm64.zip</a></li>
+</ul>
